src/test/ui/parser/issue-62973.rs
// ignore-tidy-trailing-newlines
// error-pattern: aborting due to 6 previous errors

fn main() {}

fn p() { match s { v, E { [) {) }


